--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,18 +1,25 @@
+:root {
+  --main-color: #FF5722;
+  --secondary-color: #2196F3;
+  --background-color: #212121;
+  --main-container-background-color: #000000;
+  --accent-color: #FFC107;
+  --text-color: #FFFFFF;
+}
+
 .App {
   text-align: center;
-  background-color: #212121;
+  background-color: var(--background-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  /* align-items: center;
-  justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: #FF5722;
+  color: var(--text-color);
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
 .App-link {
-  color: #61dafb;
+  color: var(--secondary-color);
 }
