--- a/src/components/MainContainer/index.css
+++ b/src/components/MainContainer/index.css
@@ -2,6 +2,6 @@
     max-width: 700px;
     height: 100vh;
     margin: 0 auto;
-    background-color: #000000;
+    background-color: var(--main-container-background-color);
     width: 100%;
 }
