More work on layout and showing some first dummy data

--- a/src/components/MainContainer/index.css
+++ b/src/components/MainContainer/index.css
@@ -1,7 +1,7 @@
 .MainContainer {
+    width: 100%;
     max-width: 700px;
-    height: 100vh;
+    height: 100%;
     margin: 0 auto;
     background-color: var(--main-container-background-color);
-    width: 100%;
 }
