--- a/src/components/SearchBar/index.css
+++ b/src/components/SearchBar/index.css
@@ -1,3 +1,12 @@
 .SearchBar {
-    
+    width: 300px;
+    margin: 10px auto;
+}
+
+.SearchBar input.ant-input {
+    font-family: -apple-system, BlinkMacSystemFont, 'Orbit', 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    serif;
+    background-color: var(--text-color);
+    border-color: var(--secondary-color);
 }
