Improving game details modal

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,6 +5,7 @@
   --main-container-background-color: #000000;
   --accent-color: #FFC107;
   --text-color: #FFFFFF;
+  --modal-background-color: #282828;
 }
 
 .App {
