--- a/src/components/GameDetailsModal/index.css
+++ b/src/components/GameDetailsModal/index.css
@@ -22,10 +22,10 @@
         font-size: 24px;
         text-align: center;
     }
+}
 
-    .GameDetailsModalImage {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+.GameDetailsModalCarouselItem {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
