--- a/src/components/GameCard/index.css
+++ b/src/components/GameCard/index.css
@@ -41,12 +41,25 @@
 .GameCardRating {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     color: var(--text-color);
     font-size: 24px;
-    text-align: right;
+    text-align: left;
     margin: 0;
     padding: 10px;
+    z-index: 1;
+    background-color: var(--main-color);
+}
+
+.GameCardWantToPlayIcon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: var(--text-color);
+    font-size: 36px;
+    text-align: right;
+    margin: 0;
+    padding: 9.5px 6px;
     z-index: 1;
     background-color: var(--main-color);
 }
