adding and removing wants to play working

--- a/src/components/GameDetailsModal/index.css
+++ b/src/components/GameDetailsModal/index.css
@@ -55,3 +55,8 @@
     font-size: 18px;
     padding: 8px 6px;  
 }
+
+.GameDetailsModalWantToPlaySaved {
+    display: inline-block;
+    background-color: var(--secondary-color);
+}
