Adding and removing games to played games

--- a/src/components/GameCard/index.css
+++ b/src/components/GameCard/index.css
@@ -76,3 +76,29 @@
     z-index: 1;
     background-color: var(--secondary-color);
 }
+
+.GameCardPlayedIcon {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    color: var(--text-color);
+    font-size: 36px;
+    text-align: right;
+    margin: 0;
+    padding: 9.5px 6px;
+    z-index: 1;
+    background-color: var(--main-color);
+}
+
+.GameCardPlayedIconSaved {
+    position: absolute;
+    top: 60px;
+    right: 0;
+    color: var(--text-color);
+    font-size: 36px;
+    text-align: right;
+    margin: 0;
+    padding: 9.5px 6px;
+    z-index: 1;
+    background-color: var(--secondary-color);
+}
