--- a/src/components/GameDetailsModal/index.css
+++ b/src/components/GameDetailsModal/index.css
@@ -30,7 +30,7 @@
     object-fit: cover;
 }
 
-.GameDetailsModalMetacriticAndWantToPlayMoreContainer {
+.GameDetailsModalHeader {
     text-align: left;
     padding-bottom: 10px;
 }
@@ -41,7 +41,8 @@
 }
 
 .GameDetailsModalWantToPlay {
-    display: inline-block;
+    display: table;
+    margin-bottom: 10px;
     background-color: var(--main-color);
 }
 
@@ -57,6 +58,30 @@
 }
 
 .GameDetailsModalWantToPlaySaved {
-    display: inline-block;
+    display: table;
+    margin-bottom: 10px;
     background-color: var(--secondary-color);
+}
+
+.GameDetailsModalPlayedGames {
+    display: table;
+    margin-bottom: 10px;
+    background-color: var(--main-color);
+}
+
+.GameDetailsModalPlayedGamesSaved {
+    display: table;
+    margin-bottom: 10px;
+    background-color: var(--secondary-color);
+}
+
+.GameDetailsModalPlayedGamesIcon {
+    color: var(--text-color);
+    font-size: 18px;
+    padding: 8px 6px;
+}
+
+.GameDetailsModalPlayedGamesText {
+    font-size: 18px;
+    padding-right: 5px;
 }
