showing own ratings and reviews all along

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,6 +6,7 @@
   --accent-color: #FFC107;
   --text-color: #FFFFFF;
   --modal-background-color: #282828;
+  --rating-modal-background-color: #D8D8D8;
 }
 
 .App {
