--- a/src/components/GameCard/index.css
+++ b/src/components/GameCard/index.css
@@ -102,3 +102,16 @@
     z-index: 1;
     background-color: var(--secondary-color);
 }
+
+.GameCardOwnRating {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    color: var(--text-color);
+    font-size: 24px;
+    text-align: left;
+    margin: 0;
+    padding: 10px;
+    z-index: 1;
+    background-color: var(--accent-color);
+}
