adding a confirmation modal to unmark a game as played, styles improvements

--- a/src/components/DeletePlayedGameConfirmationModal/index.css
+++ b/src/components/DeletePlayedGameConfirmationModal/index.css
@@ -1,4 +1,4 @@
-.PlayedGameRatingModal {
+.DeletePlayedGameConfirmationModal {
     font-family: -apple-system, BlinkMacSystemFont, 'Orbit', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     serif;
