--- a/src/components/GameCard/index.css
+++ b/src/components/GameCard/index.css
@@ -51,6 +51,30 @@
     background-color: var(--main-color);
 }
 
+.GameCardPlayTime {
+    position: absolute;
+    top: 60px;
+    width: 29px;
+    left: 0;
+    color: var(--text-color);
+    font-size: 24px;
+    text-align: center;
+    margin: 0;
+    padding: 0 10px 10px 10px;
+    z-index: 1;
+    background-color: var(--main-color);
+}
+
+.GameCardPlayTimeHours {
+    position: absolute;
+    top: 87px;
+    color: var(--text-color);
+    font-size: 12px;
+    margin: 0;
+    padding-left: 7px;
+    z-index: 1;
+}
+
 .GameCardWantToPlayIcon {
     position: absolute;
     top: 0;
